--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://dvdk1ng0.github.io/dvdk1ng0/'
+baseURL = 'http://dvdk1ng0.github.io/'
 languageCode = 'en-us'
 title = 'Collateralized Death Obligations'
 theme = 'elephants'
