--- a/config.toml
+++ b/config.toml
@@ -4,4 +4,4 @@ title = 'Collateralized Death Obligations'
 theme = 'elephants'
 publishDir = "docs"
 [params]
-	sitename = "David's Journal"
+	sitename = "Journal"
