--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = 'http://dvdk1ng0.github.io/'
 languageCode = 'en-us'
-title = 'Collateralized Death Obligations'
+title = 'Journal'
 theme = 'elephants'
 publishDir = "docs"
 [params]
